--- a/Dockerfiles/nginx-1.25.2/base/data/default.conf
+++ b/Dockerfiles/nginx-1.25.2/base/data/default.conf
@@ -42,7 +42,7 @@ server {
 
 server {
 
-    listen 8443 quic reuseport;
+    listen 8443 ssl http2;
     server_name localhost webserver;
 
     charset utf-8;
