--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,14 @@ version: "3.7"
 services:
 
   nginx:
-    image: dumptec/nginx:1.21.dev
+    image: dumptec/nginx:teste
     hostname: webserver
     container_name: nginx
     working_dir: /app
-    user: dump
+    # user: dump
     ports:
         - "80:8080"
-        - "443:8443"
+        - "443:443"
     links:
       - phpfpm
     logging:
@@ -19,10 +19,10 @@ services:
             max-file: "3"
     volumes:
         - ./app:/app
-        - ./docker/site.conf:/opt/bitnami/nginx/conf/server_blocks/default.conf:ro
+        - ./docker/site.conf:/etc/nginx/conf.d/default.conf:ro
 
   phpfpm:
-    image: dumptec/php-fpm:8.1-dev
+    image: dumptec/php-fpm:dev-8.2-latest
     container_name: phpfpm
     working_dir: /app
     extra_hosts:
