--- a/.github/workflows/docker-hub-build-and-push.yml
+++ b/.github/workflows/docker-hub-build-and-push.yml
@@ -31,7 +31,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-          images: dumptec/postgresql
+          images: dumptec/nginx
 
       - name: Build and push Docker image | BASE
         uses: docker/build-push-action@v3
