feat: adjust build structure

--- a/Dockerfiles/nginx-1.21/base/data/base.conf
+++ b/Dockerfiles/nginx-1.21/base/data/base.conf
@@ -1,4 +1,18 @@
-log_format json_log escape=json '{"ID": "$request_id", "request": "$request", "status": "$status","host": "$host","client_address": "$remote_addr","webserver_address": "$server_addr","webserver_hostname": "$hostname","http_user_agent": "$http_user_agent","upstream_addr": "$upstream_addr $upstream_http_name","date_local": "$date_local","date_gmt": "$date_gmt","request_time": "$request_time"}';
+log_format custom_log 'Request: $request
+    Status: $status 
+    Request_URI: $request_uri
+    Host: $host 
+    Remote_addr: $remote_addr 
+    Realip_remote_addr: $realip_remote_addr
+    Proxy_add_x_forwarded_for: $proxy_add_x_forwarded_for
+    Server_addr: $server_addr 
+    Proxy_Hostname: $hostname 
+    Http_user_agent: $http_user_agent
+    Upstream_addr: $upstream_addr
+    Date_local: $date_local
+    Date_gmt: $date_gmt
+    Request_time: $request_time
+    ';
 
 server {
 
@@ -23,7 +37,7 @@ server {
     add_header X-Content-Type-Options nosniff;
     add_header X-Permitted-Cross-Domain-Policies master-only;
     add_header Referrer-Policy same-origin;    return 301 https://$host$request_uri;
-
+    
 }
 
 server {
@@ -57,7 +71,6 @@ server {
     add_header X-Permitted-Cross-Domain-Policies master-only;
     add_header Referrer-Policy same-origin;
 
-    proxy_set_header        X-Request-ID    $request_id;
     proxy_set_header        X-Real-IP       $remote_addr;
     proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
 
@@ -99,7 +112,6 @@ server {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
 
         include fastcgi_params;
-        fastcgi_param REQUEST_ID $request_id;
         fastcgi_param PATH_INFO $fastcgi_path_info;
         fastcgi_param HTTP_CLIENT_IP  $proxy_add_x_forwarded_for;
         fastcgi_param REMOTE_ADDR  $remote_addr;
@@ -112,7 +124,7 @@ server {
         fastcgi_buffer_size 256k;
         fastcgi_read_timeout        1800;
         fastcgi_request_buffering    off;
-
+        
         proxy_connect_timeout       1800;
         proxy_send_timeout          1800;
         proxy_read_timeout          1800;
@@ -121,7 +133,7 @@ server {
         try_files $uri =404;
         fastcgi_index index.php;
         fastcgi_pass phpfpm:9000;
-
+        
     }
 
     location ~ /\.(?!well-known).* {
