--- a/docker/site.conf
+++ b/docker/site.conf
@@ -1,4 +1,6 @@
-log_format custom_log 'Request: $request
+log_format custom_log '
+Request ID: $request_id
+Request: $request
     Status: $status 
     Request_URI: $request_uri
     Host: $host 
