--- a/Dockerfiles/nginx-1.21/prod/data/prod.conf
+++ b/Dockerfiles/nginx-1.21/prod/data/prod.conf
@@ -1,48 +1,44 @@
-log_format json_log escape=json '{"ID": "$request_id", "request": "$request", "status": "$status","host": "$host","client_address": "$remote_addr","webserver_address": "$server_addr","webserver_hostname": "$hostname","http_user_agent": "$http_user_agent","upstream_addr": "$upstream_addr $upstream_http_name","date_local": "$date_local","date_gmt": "$date_gmt","request_time": "$request_time"}';
-
 server {
-
     listen 8080;
-    server_name localhost;
-
-    ## Cert
-    ssl_certificate /etc/ssl/localhost.crt;
-    ssl_certificate_key /etc/ssl/localhost.key;
-    ssl_dhparam /etc/ssl/localhost.pem;
-
+    server_name site.com.br;
+    ssl_certificate /etc/ssl/cert.crt;
+    ssl_certificate_key /etc/ssl/cert.key;
+    ssl_dhparam /etc/ssl/ssl-dhparams.pem;
     ssl_protocols TLSv1.3 TLSv1.2;
     ssl_prefer_server_ciphers on;
     ssl_session_cache shared:le_nginx_SSL:10m;
     ssl_session_timeout 1440m;
     ssl_session_tickets off;
     ssl_ciphers "EECDH+ECDSA+AESGCM EECDH+aRSA+AESGCM EECDH+ECDSA+SHA384 EECDH+ECDSA+SHA256 EECDH+aRSA+SHA384 EECDH+aRSA+SHA256 EECDH+aRSA+RC4 EECDH EDH+aRSA HIGH !RC4 !aNULL !eNULL !LOW !3DES !MD5 !EXP !PSK !SRP !DSS";
-
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-XSS-Protection "1; mode=block";
     add_header Strict-Transport-Security 'max-age=31536000; includeSubDomains; preload';
     add_header X-Content-Type-Options nosniff;
     add_header X-Permitted-Cross-Domain-Policies master-only;
     add_header Referrer-Policy same-origin;    return 301 https://$host$request_uri;
-
 }
 
 server {
 
+    server_name site.com.br;
     listen 8443 ssl http2;
-    server_name localhost webserver;
+    add_header alt-svc 'h3-23=":443"; ma=86400';
+
+    keepalive_requests 1000;
+    keepalive_timeout 120s;
+    proxy_http_version 1.1;
+    proxy_set_header Connection "";
 
     charset utf-8;
     root /app/public;
     index index.php;
     autoindex_localtime on;
     error_page 404 index.php;
-    client_max_body_size 2M;
+    client_max_body_size 512M;
 
-    ## Cert
-    ssl_certificate /etc/ssl/localhost.crt;
-    ssl_certificate_key /etc/ssl/localhost.key;
-    ssl_dhparam /etc/ssl/localhost.pem;
-
+    ssl_certificate /etc/ssl/cert.crt;
+    ssl_certificate_key /etc/ssl/cert.key;
+    ssl_dhparam /etc/ssl/ssl-dhparams.pem;
     ssl_protocols TLSv1.3 TLSv1.2;
     ssl_prefer_server_ciphers on;
     ssl_session_cache shared:le_nginx_SSL:10m;
@@ -57,12 +53,11 @@ server {
     add_header X-Permitted-Cross-Domain-Policies master-only;
     add_header Referrer-Policy same-origin;
 
-    proxy_set_header        X-Request-ID    $request_id;
     proxy_set_header        X-Real-IP       $remote_addr;
     proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
 
     error_log  /proc/1/fd/1;
-    access_log /proc/1/fd/2 custom_log;
+    access_log /proc/1/fd/2;
 
     location / {
         try_files $uri $uri/ /index.php$is_args$query_string;
@@ -95,32 +90,30 @@ server {
 
     location ~ \.php$ {
 
-        fastcgi_split_path_info ^(.+?\.php)(/.*)$;
+        include             fastcgi_params;
+        try_files           $uri =404;
+        fastcgi_pass        phpfpm:9000;
+        fastcgi_index       index.php;
+        
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_split_path_info ^(.+?\.php)(/.*)$;
 
-        include fastcgi_params;
-        fastcgi_param REQUEST_ID $request_id;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
-        fastcgi_param HTTP_CLIENT_IP  $proxy_add_x_forwarded_for;
-        fastcgi_param REMOTE_ADDR  $remote_addr;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param HTTPS on;
-        fastcgi_param modHeadersAvailable true; # Avoid sending the security headers twice
-        fastcgi_param front_controller_active true; # Enable pretty urls
-
-        fastcgi_buffers 16 128k;
-        fastcgi_buffer_size 256k;
-        fastcgi_read_timeout        1800;
-        fastcgi_request_buffering    off;
-
-        proxy_connect_timeout       1800;
+        fastcgi_param           PATH_INFO $fastcgi_path_info;
+        fastcgi_param           REMOTE_ADDR  $remote_addr;
+        fastcgi_param           SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param           SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param           HTTPS on;
+        fastcgi_param           modHeadersAvailable true;
+        fastcgi_param           front_controller_active true;
+        
+        send_timeout                1800;
+        fastcgi_buffers 16          128k;
         proxy_send_timeout          1800;
         proxy_read_timeout          1800;
-        send_timeout                1800;
-
-        try_files $uri =404;
-        fastcgi_index index.php;
-        fastcgi_pass phpfpm:9000;
+        fastcgi_buffer_size         256k;
+        fastcgi_read_timeout        1800;
+        proxy_connect_timeout       1800;
+        fastcgi_request_buffering   off;
 
     }
 
