--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.7"
 services:
 
   nginx:
-    image: dumptec/nginx:teste
+    image: dumptec/nginx:dev-1.25.2
     hostname: webserver
     container_name: nginx
     working_dir: /app
