refactor: use json in log

--- a/Dockerfiles/1.21/base/data/base.conf
+++ b/Dockerfiles/1.21/base/data/base.conf
@@ -1,18 +1,5 @@
-log_format custom_log 'Request: $request
-    Status: $status
-    Request_URI: $request_uri
-    Host: $host
-    Remote_addr: $remote_addr
-    Realip_remote_addr: $realip_remote_addr
-    Proxy_add_x_forwarded_for: $proxy_add_x_forwarded_for
-    Server_addr: $server_addr
-    Proxy_Hostname: $hostname
-    Http_user_agent: $http_user_agent
-    Upstream_addr: $upstream_addr
-    Date_local: $date_local
-    Date_gmt: $date_gmt
-    Request_time: $request_time
-    ';
+log_format json_log escape=json '{"ID": "$request_id", "request": "$request", "status": "$status","host": "$host","client_address": "$remote_addr","webserver_address": "$server_addr","webserver_hostname": "$hostname","http_user_agent": "$http_user_agent","upstream_addr": "$upstream_addr $upstream_http_name","date_local": "$date_local","date_gmt": "$date_gmt","request_time": "$request_time"}';
+
 
 server {
 
@@ -75,7 +62,7 @@ server {
     proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
 
     error_log  /proc/1/fd/1;
-    access_log /proc/1/fd/2 custom_log;
+    access_log /proc/1/fd/2 json_log;
 
     location / {
         try_files $uri $uri/ /index.php$is_args$query_string;
