--- a/docker/site.conf
+++ b/docker/site.conf
@@ -1,20 +1,4 @@
-log_format custom_log '
-Request ID: $request_id
-Request: $request
-    Status: $status 
-    Request_URI: $request_uri
-    Host: $host 
-    Remote_addr: $remote_addr 
-    Realip_remote_addr: $realip_remote_addr
-    Proxy_add_x_forwarded_for: $proxy_add_x_forwarded_for
-    Server_addr: $server_addr 
-    Proxy_Hostname: $hostname 
-    Http_user_agent: $http_user_agent
-    Upstream_addr: $upstream_addr
-    Date_local: $date_local
-    Date_gmt: $date_gmt
-    Request_time: $request_time
-    ';
+log_format json_log escape=json '{"ID": "$request_id", "request": "$request", "status": "$status","host": "$host","client_address": "$remote_addr","webserver_address": "$server_addr","webserver_hostname": "$hostname","http_user_agent": "$http_user_agent","upstream_addr": "$upstream_addr $upstream_http_name","date_local": "$date_local","date_gmt": "$date_gmt","request_time": "$request_time"}';
 
 server {
 
@@ -46,13 +30,13 @@ server {
     add_header X-Content-Type-Options nosniff;
     add_header X-Permitted-Cross-Domain-Policies master-only;
     add_header Referrer-Policy same-origin;    #return 301 https://$host$request_uri;
-    
+
     proxy_set_header        X-Real-IP       $remote_addr;
     proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
 
     # logs
     error_log  /proc/1/fd/1;
-    access_log /proc/1/fd/2 custom_log;
+    access_log /proc/1/fd/2 json_log;
 
     location ~ \.php$ {
 
@@ -72,7 +56,7 @@ server {
         fastcgi_buffer_size 256k;
         fastcgi_read_timeout        1800;
         fastcgi_request_buffering    off;
-        
+
         proxy_connect_timeout       1800;
         proxy_send_timeout          1800;
         proxy_read_timeout          1800;
@@ -81,7 +65,7 @@ server {
         try_files $uri =404;
         fastcgi_index index.php;
         fastcgi_pass phpfpm:9000;
-        
+
     }
 
 }
@@ -122,7 +106,7 @@ server {
 
     # logs
     error_log  /proc/1/fd/1;
-    access_log /proc/1/fd/2 custom_log;
+    access_log /proc/1/fd/2 json_log;
 
     location / {
         try_files $uri $uri/ /index.php$is_args$query_string;
