--- a/Dockerfiles/1.25.2/base/data/default.conf
+++ b/Dockerfiles/1.25.2/base/data/default.conf
@@ -62,7 +62,7 @@ server {
     proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
 
     error_log  /proc/1/fd/1;
-    access_log /proc/1/fd/2 custom_log;
+    access_log /proc/1/fd/2 json_log;
 
     location / {
         try_files $uri $uri/ /index.php$is_args$query_string;
