--- a/Dockerfiles/1.25.2/dev/data/default.conf
+++ b/Dockerfiles/1.25.2/dev/data/default.conf
@@ -3,6 +3,7 @@ log_format json_log escape=json '{"ID": "$request_id", "request": "$request", "s
 server {
 
     listen 8080;
+    http2 on;
     server_name localhost;
 
     ## Cert
@@ -28,7 +29,8 @@ server {
 
 server {
 
-    listen 8443 ssl http2;
+    listen 8443 ssl;
+    http2 on;
     server_name localhost webserver;
 
     charset utf-8;
