--- a/docker/site.conf
+++ b/docker/site.conf
@@ -3,6 +3,7 @@ log_format json_log escape=json '{"ID": "$request_id", "request": "$request", "s
 server {
 
     listen 8080;
+    http2 on;
     server_name localhost;
 
     charset utf-8;
@@ -72,7 +73,8 @@ server {
 
 server {
 
-    listen 443 ssl http2;
+    listen 443 ssl;
+    http2 on;
     server_name localhost;
 
     charset utf-8;
