--- a/Dockerfiles/1.25.5/base/data/nginx.conf
+++ b/Dockerfiles/1.25.5/base/data/nginx.conf
@@ -4,24 +4,28 @@ error_log  /var/log/nginx/error.log notice;
 pid        /run/nginx/nginx.pid;
 
 events {
-    worker_connections  1024;
+    worker_connections  2048;
 }
 
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
+    tcp_nopush on;
+    tcp_nodelay on;
+
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
+    include /etc/nginx/mime.types
     access_log  /var/log/nginx/access.log  main;
 
     sendfile        on;
+    
+    keepalive_timeout  30;
 
-    keepalive_timeout  65;
-
-    gzip  on;
+    gzip  off;
 
     include /etc/nginx/conf.d/*.conf;
 }
