feat: add proxy configuration limits

--- a/Dockerfiles/1.25.5/prod/data/default.conf
+++ b/Dockerfiles/1.25.5/prod/data/default.conf
@@ -110,6 +110,10 @@ server {
         fastcgi_param modHeadersAvailable true; # Avoid sending the security headers twice
         fastcgi_param front_controller_active true; # Enable pretty urls
 
+        fastcgi_read_timeout 300;
+        fastcgi_send_timeout 300;
+        fastcgi_connect_timeout 300;
+
         try_files $uri =404;
         fastcgi_index index.php;
         fastcgi_pass phpfpm:9000;
