--- a/Dockerfiles/1.25.5/prod/data/nginx.conf
+++ b/Dockerfiles/1.25.5/prod/data/nginx.conf
@@ -26,5 +26,9 @@ http {
 
     gzip  off;
 
+    proxy_read_timeout 90;
+    proxy_connect_timeout 90;
+    proxy_send_timeout 90;
+
     include /etc/nginx/conf.d/*.conf;
 }
